# bnn_interplay_priors_overparam

./: .gitignore  README.md  pyproject.toml
Rcode/: marginal_viz.R
data/fireball/mile_bike/: Lppd_sampling.npz
data/fireball/nuts_bike/: Lppd_sampling.npz
experiments/: fireballs.py  laplace_approximation.py  laplace_approximation_CIFAR10.py  laplace_approximation_UCI.py  mean_field_variational_inference.py  mean_field_variational_inference_CIFAR10.py  mean_field_variational_inference_UCI.py  save_traces.py
experiments/configs/: cifar10_resnet.yaml  cnn_classif_sghmc.yaml  jacobian_one_two_one_relu.yaml  laplace_cifar10_benchmark.yaml  laplace_uci_benchmark.yaml  mfvi_cifar10_benchmark.yaml  scale_class_mile.yaml  scale_regr_mile.yaml  scale_regr_mile_bike.yaml  scale_regr_mile_underfit.yaml
experiments/configs/covariance_correlation/: corr_5-16-16-16-1_airfoil.yaml  corr_5-16-1_airfoil.yaml
experiments/configs/flat_likelihood/: five_five_one_relu_bias.yaml  five_hundred_one_relu_bias.yaml  one_five_one_relu_bias.yaml  one_hundred_one_relu_bias.yaml
experiments/configs/marginals_1-M-1/: one_five_one.yaml  one_five_one_01.yaml  one_five_one_03.yaml  one_hundred_one.yaml  one_hundred_one_01.yaml  one_hundred_one_03.yaml  one_one_one.yaml  (+2 more)
experiments/figures/: 1d_under_overparam.py  bias_marginals.py  correlation_covariance.py  cumulative_lppd.py  fireballs.py  flat_likelihood.py  jacobian_kernel.py  nuts_vs_mfvi.py  one_m_one.py  permutation_warmstart.py
sabi/: __init__.py  cumulative_lppd.py  fireballs.py
src/: config.py  models.py
src/abi/: utils.py
(+60 files in other folders)
