[tool.poetry]
name = "sabi"
version = "0.1.0"
description = "TBD"
authors = ["Anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "0.4.33"
matplotlib = "^3.9.3"
plotnine = "^0.14.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
scikit-misc = "^0.5.1"
jinja2 = "^3.1.5"
llvmlite = "0.43.0"
numba = "0.60.0"
datashader = "^0.16.3"
pyarrow = "^19.0.0"
dask = "2024.11.2"
holoviews = "^1.20.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
